deploy/endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firmware-endpoint
spec:
  selector:
    app: firmware-endpoint
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
