deploy/endpoint/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: firmware-endpoint
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: firmware-endpoint
    weight: 100
  wildcardPolicy: None
